# AS00577-24

as0577/: README.md
as0577/new_Branch/doc/: readme.md
as0577/new_Branch/src/: CMakeLists.txt  main.cpp
trunk/: AS057702
trunk/AS0057706/task_01/doc/: readme.md
trunk/AS0057706/task_01/src/: CMakeLists.txt  main.cpp
trunk/AS0057706/task_02/doc/: readme.md
trunk/AS0057706/task_02/src/: CMakeLists.txt  main.cpp  models.hpp
trunk/AS0057706/task_02/test/: test.cpp
trunk/AS0057722/task_02/: CMakeLists.txt
trunk/AS0057722/task_02/src/: main.cpp  model.cpp  model.h
trunk/AS0057722/task_02/test/: test_model.cpp
trunk/AS0577-03/tasks/task_00/: readme.md
trunk/AS0577-03/tasks/task_01/: readme.md
trunk/AS0577-03/tasks/task_02/: readme.md
trunk/AS0577-03/trunk/AS0057702/: README.md
trunk/AS0577-03/trunk/AS0057702/task_01/: lab1.md
trunk/AS0577-03/trunk/AS0057702/task_01/src/: CMakeLists.txt  bez1lab.cpp
trunk/AS0577-03/trunk/AS0057702/task_02/: CMakeLists.txt  lab2.md
trunk/AS0577-03/trunk/AS0057702/task_02/test/: test_temperature_control.cpp  test_temperature_control.h
trunk/as0057713/task_01/doc/: readme.md
trunk/as0057713/task_02/: CMakeLists.txt
trunk/as0057713/task_02/doc/: readme.md
trunk/as0057713/task_02/src/: main.cpp
trunk/as0057713/task_02/test/: CMakeLists.txt
trunk/as057702/task_0/: readme.md
trunk/as057702/task_01/doc/: readme.md
trunk/as057702/task_01/src/: CMakeLists.txt  main.cpp
trunk/as057702/task_02/doc/: readme.md
trunk/as057702/task_02/test/: test_main.cpp
